<resources>
    <string name="app_name">Unit Converter</string>
    <string name="weight">Weight</string>
    <string name="length">Length</string>
    <string name="temperature">Temperature</string>
    <string name="speed">Speed</string>
    <string name="time">Time</string>
    <string name="area">Area</string>
    <string name="fuel">Fuel</string>
    <string name="pressure">Pressure</string>
    <string name="energy">Energy</string>
    <string name="storage">Storage</string>
    <string name="force">Force</string>
    <string name="convert">Convert</string>
    <string name="enter_value">Enter Value</string>
    <string name="result">Result</string>
    <string name="from">From :</string>
    <string name="to">TO :</string>
    <string name="volume">Volume</string>
    <string name="unit_converter">Unit Converter</string>
    <string name="frequency">Frequency</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="app_id">ca-app-pub-3940256099942544~3347511713</string>
</resources>